--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ input{
   button {
     display: inline-block;
     font-family: sans-serif;
-    background-color: #5e6df1;
+    background-color:black;
     border-radius: 55px;
     border: 3px double #cccccc;
     color: #eeeeee;
